import org.apache.tools.ant.filters.ReplaceTokens

plugins {
    id 'java'
}

group = 'com.ryan'
version = '1.0'

sourceCompatibility = '1.16'
targetCompatibility = '1.16'

repositories {
    mavenCentral()
    maven {
        url = 'https://papermc.io/repo/repository/maven-public/'
    }
    maven {
        name = 'sonatype'
        url = 'https://oss.sonatype.org/content/groups/public/'
    }
    
}

dependencies {
    compileOnly 'io.papermc.paper:paper-api:1.17.1-R0.1-SNAPSHOT'
}

processResources {
    setDuplicatesStrategy(DuplicatesStrategy.INCLUDE)
    from(sourceSets.main.resources.srcDirs) {
        filter ReplaceTokens, tokens: [version: version]
    }
}

task copyJar(type: Copy) {
    dependsOn(build)
    from file("${buildDir}/libs/Tag-1.0.jar")
    into file("C:/Users/Ryan/Documents/MinecraftServers/Paper-1.17.1/plugins")
}